--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="header_nav">
         <nav>
             <ul>
-                <li><a href="thingstodoinsanfrancisco.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="aboutthingstodoinsanfrancisco.html#">About</a></li>
                 <li><a href="contactthingstodoinsanfrancisco.html">Contact</a></li>
             </ul>
